--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -7,6 +7,10 @@
   </head>
 
 */
+/*#3*/
+#igottabeme{
+    font-family: "Arial", "Helvetica", "sans-serif"
+}
 /*#2*/
 body {
     background-color: skyblue ;
