--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -8,14 +8,19 @@
 
 */
 /*#3*/
-#igottabeme{
-    font-family: "Arial", "Helvetica", "sans-serif"
-}
+
 /*#2*/
 body {
     background-color: skyblue ;
   }
-
+/*#3*/
+#igottabeme{
+    font-family: "Arial", "Helvetica", "sans-serif";
+}
+/*#4*/
+.classy{
+    margin-left: 10px;
+}
 
 /* --- pre-existing css --- */
 .stripey tr:nth-child(even) {
