more troubleshooting procedures

--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -27,6 +27,10 @@ div {
     margin-bottom: 50px;
     background-color: red;
 }
+#d1{
+    margin-bottom: 50px;
+    background-color: black;
+}
 
 
 
