--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -27,7 +27,17 @@ div {
     margin-bottom: 50px;
    
 }
-
+/*#6*/
+span {
+    height: 100px;
+    width: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: 5px solid blue;
+    background-color: yellow;
+}
 
 
 
